<resources>
    <string name="app_name">Supermarket_NO6</string>
    <string name="register">新人注册</string>
    <string name="fragmentmycollections">我的收藏</string>
    <string name="fragmentmyaddress">收获地址</string>
    <string name="fragmentmysettings">设置</string>
    <string name="fragmentmyaboutme">关于我们</string>
    <string name="fragmentmyshares">分享给好友</string>
    <string name="fragmentmypingjia">评价</string>
    <string name="home">首页</string>
    <string name="shop">店铺</string>
    <string name="cart">购物车</string>
    <string name="my">我的</string>
    <string name="fragmentinfo">个人信息</string>
    <string name="fragmentsave">保存</string>
    <string name="fragmentmyhead">头像:</string>
    <string name="fragmentmynicheng">昵称：</string>
    <string name="fragmentmyphone">Y153***6912</string>
    <string name="fragmentmysex">性别：</string>
    <string name="fragmentmygirl">女</string>
    <string name="fragmentmyboy">男</string>
    <string name="fragmentmybirthday">生日：</string>
    <string name="fragmentmyemail">邮箱：</string>
    <string name="fragmentmynumber">15315352552@163.com</string>
    <string name="fragmentmyyear">2017</string>
    <string name="fragmentmyexsitlogin">退出登录</string>
    <string name="fragmentmyloginphone">请输入您的手机号</string>
    <string name="fragmentmyloginkey">请输入您的密码</string>
    <string name="fragmentmyatonce">立即登录</string>
    <string name="fragmentmynewperson">新人注册</string>
    <string name="quanxuyan">全选</string>
    <string name="zongjia">总价:</string>
    <string name="qujiesuan">去结算</string>
    <string name="shanchu">删除</string>
    <string name="shoucang">收藏</string>
    <string name="fragmentmydsflogin">第三方登录</string>
    <string name="fragment_my_login_qq">QQ登录</string>
    <string name="fragment_my_login_wexin">微信登录</string>
    <string name="write_infos">填写个人资料</string>
    <string name="tename">真实姓名</string>
    <string name="telianxiphone">联系电话</string>
    <string name="teshenfenhao">身份证号</string>
    <string name="fragmentmyatonceregister">立即注册</string>
    <string name="phonelogin">手机号登录</string>
    <string name="fragmentmyatfinish">完成</string>
    <string name="wanshanphone">完善手机号</string>
    <string name="updatepsw">修改密码</string>
    <string name="updatesure">确定</string>
    <string name="updatephone">修改手机号</string>
    <string name="fragmentmygetadress">收获地址</string>
    <string name="fragment_my_get_address_name">张三</string>
    <string name="fragment_my_get_address_phone">15330296912</string>
    <string name="fragment_my_get_address">北京市顺义区天竺路空港科技大厦A座</string>
    <string name="fragment_my_address_moren">设置默认地址</string>
    <string name="fragment_my_address_bianji">编辑</string>
    <string name="fragment_my_address_delete">删除</string>
</resources>
