<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
<com.zhy.autolayout.AutoLinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/fragment_my_info_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/back"
        android:layout_weight="1"/>
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmentinfo"
        android:textSize="27px"
        android:textColor="#2a2a2a"
        android:layout_weight="3"
        android:gravity="center"/>
    <TextView
        android:id="@+id/fragment_info_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmentsave"
        android:textSize="24px"
        android:textColor="#2a2a2a"
        android:layout_weight="1"/>
</com.zhy.autolayout.AutoLinearLayout>
    <view
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:background="@color/fragment_my_height">
    </view>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="123px"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragmentmyhead"
            android:paddingLeft="20px"
            android:layout_gravity="bottom"
            android:layout_weight="3"/>
        <ImageView
            android:layout_width="110px"
            android:layout_height="110px"
            android:src="@mipmap/ic_launcher"
            android:layout_weight="1"
            android:paddingTop="38px"
            android:paddingLeft="20px"
            android:layout_gravity="bottom"
           />
    </com.zhy.autolayout.AutoLinearLayout>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragmentmynicheng"
            android:paddingLeft="20px"
            android:layout_gravity="bottom"
            android:paddingTop="55px"
            android:textSize="24px"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragmentmyphone"
            android:paddingLeft="20px"
            android:layout_gravity="bottom"
            android:paddingTop="55px"
            android:textSize="24px"/>
    </com.zhy.autolayout.AutoLinearLayout>
    <view
        android:layout_width="680px"
        android:layout_height="1px"
        android:background="@color/fragment_my_title"
        android:layout_marginTop="35px">
    </view>
    
<com.zhy.autolayout.AutoLinearLayout
    android:layout_width="match_parent"
    android:layout_height="96px"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmentmysex"
        android:paddingLeft="20px"
        android:paddingTop="35px"
        android:textSize="24px"/>
    <View
        android:layout_width="26px"
        android:layout_height="0px">
    </View>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmentmygirl"
        android:paddingLeft="12px"/>
    <View
        android:layout_width="40px"
        android:layout_height="0px">
    </View>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmentmyboy"
        android:paddingLeft="12px"/>

</com.zhy.autolayout.AutoLinearLayout>
    <view
        android:layout_width="680px"
        android:layout_height="1px"
        android:background="@color/fragment_my_title">
    </view>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragmentmyemail"
            android:paddingLeft="20px"
            android:layout_gravity="center"

            android:textSize="24px"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragmentmynumber"
            android:paddingLeft="20px"
            android:layout_gravity="center"
            android:textSize="26px"/>
    </com.zhy.autolayout.AutoLinearLayout>
    <view
        android:layout_width="680px"
        android:layout_height="1px"
        android:background="@color/fragment_my_title">
    </view>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="96px"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragmentmybirthday"
            android:paddingLeft="20px"
            android:paddingTop="35px"
            android:textSize="24px"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragmentmyyear"
            android:background="@drawable/fragment_my_selector_ju"
            android:textSize="24px"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragmentmybirthday"
            android:paddingLeft="20px"
            android:paddingTop="35px"
            android:textSize="24px"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragmentmybirthday"
            android:paddingLeft="20px"
            android:paddingTop="35px"
            android:textSize="24px"/>
    </com.zhy.autolayout.AutoLinearLayout>
    <view
        android:layout_width="match_parent"
        android:layout_height="414px"
        android:background="@color/fragment_my_title">
    </view>

    <Button
        android:id="@+id/button"
        android:layout_width="680px"
        android:layout_height="64px"
        android:layout_gravity="center"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:paddingBottom="84px"
        android:gravity="center"
        android:text="@string/fragmentmyexsitlogin"/>
</com.zhy.autolayout.AutoLinearLayout>
