<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kf.gyn.com.supermarket_no6.activity.MainActivity">

    <com.zhy.autolayout.AutoFrameLayout
        android:id="@+id/auto_frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/auto_ll">

    </com.zhy.autolayout.AutoFrameLayout>


    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/auto_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14px"
        android:orientation="horizontal">

        <kf.gyn.com.supermarket_no6.widget.ImageTextView
            android:id="@+id/bottom_navigation_button_home"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginTop="14px"
            android:layout_weight="1"
            android:gravity="center"
            app:image="@drawable/bottom_navigation_home"
            app:text="@string/home"
            app:textColor="@color/bottom_navigation_text" />


        <kf.gyn.com.supermarket_no6.widget.ImageTextView
            android:id="@+id/bottom_navigation_button_shop"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginTop="14px"
            android:layout_weight="1"
            android:gravity="center"
            app:image="@drawable/bottom_navigation_shop"
            app:text="@string/shop"
            app:textColor="@color/bottom_navigation_text" />

        <kf.gyn.com.supermarket_no6.widget.ImageTextView
            android:id="@+id/bottom_navigation_button_cart"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginTop="14px"
            android:layout_weight="1"
            android:gravity="center"
            app:image="@drawable/bottom_navigation_cart"
            app:text="@string/cart"
            app:textColor="@color/bottom_navigation_text" />

        <kf.gyn.com.supermarket_no6.widget.ImageTextView
            android:id="@+id/bottom_navigation_button_my"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginTop="14px"
            android:layout_weight="1"
            android:gravity="center"
            app:image="@drawable/bottom_navigation_my"
            app:text="@string/my"
            app:textColor="@color/bottom_navigation_text" />

    </com.zhy.autolayout.AutoLinearLayout>


</com.zhy.autolayout.AutoRelativeLayout>
