<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400px"
        android:background="#f0f"/>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="104px"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="44px"
            android:layout_height="44px"
            android:src="@mipmap/phone"
            android:paddingLeft="12px"
            android:layout_marginTop="43px"
            android:layout_marginBottom="14px"
            />
        <view
            android:layout_width="10px"
            android:layout_height="0px"
            android:background="@color/fragment_my_height">
        </view>
        <TextView
            android:layout_width="680px"
            android:layout_height="104px"
            android:textSize="24px"
            android:paddingTop="54px"
            android:paddingBottom="14px"
            android:textColor="@color/loginphone"
            android:hint="@string/fragmentmyloginkey"/>
    </com.zhy.autolayout.AutoLinearLayout>
    <view
        android:layout_width="780px"
        android:layout_height="1px"
        android:layout_gravity="center"
        android:background="@color/fragment_my_height">
    </view>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="104px"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="44px"
            android:layout_height="44px"
            android:src="@mipmap/key"
            android:paddingLeft="12px"
            android:layout_marginTop="43px"
            android:layout_marginBottom="14px"
            />
        <view
            android:layout_width="10px"
            android:layout_height="0px"
            android:background="@color/fragment_my_height">
        </view>
        <TextView
            android:layout_width="680px"
            android:layout_height="104px"
            android:textSize="24px"
            android:paddingTop="54px"
            android:paddingBottom="14px"
            android:textColor="@color/loginphone"
            android:hint="@string/fragmentmyloginkey"/>
            <ImageView
                android:layout_width="44px"
                android:layout_height="44px"
                android:src="@mipmap/ic_launcher"
                android:layout_marginTop="43px"
                android:layout_marginBottom="14px"/>
    </com.zhy.autolayout.AutoLinearLayout>
    <view
        android:layout_width="780px"
        android:layout_height="1px"
        android:layout_gravity="center"
        android:background="@color/fragment_my_height">
    </view>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/fragmentmyatonce"
    android:textSize="28px"
    android:gravity="center"
    android:textColor="@color/textsize_my_btn"
    android:background="@drawable/my_button_login_selector"
    android:layout_marginRight="20px"
    android:layout_marginLeft="20px"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragmentmynewperson"
        android:textSize="28px"
        android:gravity="center"
        android:textColor="@color/colorButtonLanse"
        android:background="@drawable/fragment_my_selector_ju"
        android:layout_marginTop="18px"
        android:layout_marginRight="20px"
        android:layout_marginLeft="20px"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:orientation="horizontal">
        <view
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/fragment_my_height"
            android:layout_marginTop="70px">
        </view>
        <View
            android:layout_width="46px"
            android:layout_height="0px"
            android:layout_marginTop="70px">

        </View>
        <TextView
            android:id="@+id/fragment_my_dsf_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragmentmydsflogin"
            android:textSize="20px"
            android:textColor="@color/fragmentmydsflogin"
            android:layout_marginTop="70px"/>
        <View
            android:layout_width="46px"
            android:layout_height="0px"
            android:layout_marginTop="70px">

        </View>
        <view
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/fragment_my_height"
            android:layout_marginTop="70px">
        </view>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30px">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/fragment_my_login_qq"
                android:layout_width="86px"
                android:layout_height="86px"
                android:src="@mipmap/qq"
                android:layout_marginLeft="234px"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_my_login_qq"
                android:layout_marginLeft="240px"
                android:layout_marginTop="18px"
                android:textSize="20px"/>
        </LinearLayout>
        
        <View
            android:layout_width="80px"
            android:layout_height="0px">
        </View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/fragment_my_login_weixin"
                android:layout_width="86px"
                android:layout_height="86px"
                android:src="@mipmap/wexin"
                android:layout_marginRight="234px"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_my_login_wexin"
                android:layout_marginRight="234px"
                android:layout_marginTop="18px"
                android:textSize="20px"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
