<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <view
        android:layout_width="match_parent"
        android:layout_height="71px"
        android:background="@color/fragment_my_title">
    </view>
<com.zhy.autolayout.AutoLinearLayout
    android:layout_width="match_parent"
    android:layout_height="100px"
    android:orientation="horizontal">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/collections"
        android:paddingLeft="12px"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmentmycollections"
        android:layout_weight="3"
        android:textSize="24px"
        android:textColor="#2a2a2a"
        android:layout_gravity="center_vertical"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/collections"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"/>
</com.zhy.autolayout.AutoLinearLayout>
    <view
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/fragment_my_title">
    </view>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/dingwei"
            android:paddingLeft="12px"
            android:layout_weight="1"
           android:layout_marginTop="38px"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragmentmyaddress"
            android:layout_weight="3"
            android:textSize="24px"
            android:textColor="#2a2a2a"
            android:layout_marginTop="38px"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/collections"
            android:layout_weight="1"
            android:layout_marginTop="38px"/>
    </com.zhy.autolayout.AutoLinearLayout>
    <view
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/fragment_my_title">
    </view>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/shezhi"
            android:paddingLeft="12px"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragmentmysettings"
            android:layout_weight="3"
            android:textSize="24px"
            android:textColor="#2a2a2a"
            android:layout_gravity="center_vertical"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/collections"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>
    </com.zhy.autolayout.AutoLinearLayout>
    <view
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/fragment_my_title">
    </view>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/aboutme"
            android:paddingLeft="12px"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragmentmyaboutme"
            android:layout_weight="3"
            android:textSize="24px"
            android:textColor="#2a2a2a"
            android:layout_gravity="center_vertical"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/collections"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>
    </com.zhy.autolayout.AutoLinearLayout>
    <view
        android:layout_width="match_parent"
        android:layout_height="28px"
        android:background="@color/fragment_my_title">
    </view>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/fengxiang"
            android:paddingLeft="12px"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragmentmyshares"
            android:layout_weight="3"
            android:textSize="24px"
            android:textColor="#2a2a2a"
            android:layout_gravity="center_vertical"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/collections"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>
    </com.zhy.autolayout.AutoLinearLayout>
    <view
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/fragment_my_title">
    </view>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/pingjia"
            android:paddingLeft="12px"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragmentmypingjia"
            android:layout_weight="3"
            android:textSize="24px"
            android:textColor="#2a2a2a"
            android:layout_gravity="center_vertical"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/collections"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>
    </com.zhy.autolayout.AutoLinearLayout>
    <view
        android:layout_width="match_parent"
        android:layout_height="60px"
        android:background="@color/fragment_my_title">
    </view>
</com.zhy.autolayout.AutoLinearLayout>
